<b>2009-10-16</b>

* Upgraded to OpenLayers 2.8 RC5
* Added labels and tooltips to airports (2515935)
* Bugfix: Ghosted airports show up funny in IE (2529004)

<b>2009-10-14</b>

* Updated route map database

<b>2009-10-06</b>

* Editing of existing airlines implemented
* Display whether or not airline is active in search
* Filter out non-active airlines from IATA searches
* Bugfix: Pre-entering airline, mode into "New airline" dialog fixed

<b>2009-08-18</b>

* Bugfix: Debugging alertbox removed from Trip editor

<b>2009-08-14</b>

* Bugfix: Future flights imported correctly from FlightMemory

<b>2009-08-10</b>

* Bugfix: Decimal timezones accidentally truncated in duration calculations

<b>2009-07-23</b>

* Bugfix: Correct nasty bug in handling km conversions in some locales (1.6 was turning into 1,6)

<b>2009-07-23</b>

* Launched Spanish (es) and Portuguese (pt)
* Bugfix: Correct airport dialog popped up when autocompleting preexisting airport
* Bugfix: Default to codeshares off when first showing airline map
* Bugfix: Tab indexes for main screen (first username block, only then quicksearch)
* Bugfix: mi/km indicated for Longest/Shortest flight in "Analyze"

<b>2009-07-21</b>

* Plane name added to registration automatically for FlightMemory imports
* Add byte-order mark to CSV exports so Excel understands that they're UTF-8
* Workaround: Non-ASCII characters stripped from FM imports before parsing (2824341)
* Bugfix: Suppress PHP warnings for missing airports/airlines

<b>2009-07-20</b>

* Bugfix: Trip edit/delete broken (2823849)

<b>2009-07-18</b>

* Airline maps default to direct only, codeshares can be enabled in filter
* Non-IATA airlines now filtered out from quicksearch
* Inactive airlines now filtered out from quicksearch
* No map resizing when routemap airline filter is changed
* Bugfix: Airport location shown even when there are no routes

<b>2009-07-17</b>

* Lithuanian updated
* Bugfix: Airline maps gray out all airports with codeshares (2822898)
